<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_switch_value"
        android:title="@string/prefer_dummy_location" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="0"
        android:inputType="numberDecimal"
        android:key="@string/key_latitude_value"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/latitude" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="0"
        android:inputType="numberDecimal"
        android:key="@string/key_longitude_value"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/longitude" />

</PreferenceScreen>
